# xordecode

./: README.md  pyproject.toml  xordecode.py
