[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xordecode"
version = "1.0.0"
description = "XOR decrypter tool for analyzing encrypted data"
readme = "README.md"
authors = [
    {name = "m-jingu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.6"
dependencies = []

[project.scripts]
xordecode = "xordecode:main"

[project.urls]
Repository = "https://github.com/m-jingu/xordecode"
Issues = "https://github.com/m-jingu/xordecode/issues"

[tool.hatch.build.targets.wheel]
packages = ["xordecode.py"]
